# Universal-AI-Gateway

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  repro_setup.sh  run_ci.sh  run_docker_app.bat  run_docker_app.sh  setup_infra.bat  setup_infra.sh
core/api/: auth_utils.py  server.py  services.py
core/common/: cache_manager.py  cache_validator.py  clock.py  errors.py  fuzzy_xml.py  kafka_tracing.py  logging_config.py  models.py  tracing.py  utils.py
core/config/: __init__.py  config_manager.py  default_config.py  mcp_models.py  waiting_messages.py
core/db/: mongo.py  users.py
core/engine/: manager.py  model_garage.py  native_driver.py  pattern_loader.py  prompt_constructor.py  reasoning.py  (+2 more)
docs/: ARCHITECTURE_AND_ROADMAP.md  ARCHITECTURE_LIMITATIONS.md  CONFIGURATION_GUIDE.md  DSL_REFERENCE.md  GETTING_STARTED.md  GROQ_PROVIDER_GUIDE.md  INTEGRATION_GUIDE.md  INTRODUCTION.md  LOAD_BALANCING.md  OPTIMIZATION_REPORT.md  PERFORMANCE_BENCHMARKS.md  PERFORMANCE_OPTIMIZATION.md  REACT_ENGINE.md  SEARCH_ENGINE_STRATEGY.md  SMART_SEARCH.md  USER_CONFIG_GUIDE.md
frontend/: index.html
react_patterns/: __init__.py  analytical_react.py  linear_react.py  manual_pattern_template.py  mcp_react.py  simple_react.py  sonata_react.py
run/: run_server.bat  run_server.sh
setup/: install.bat  install.sh  sync_model_aliases.py
test_client_ui/: docker-compose.yml  run_ui.bat  run_ui.sh  setup_ui.bat  setup_ui.sh
tests/: test_fuzzy_xml.py  test_pattern_validity.py  test_regex_leak.py  test_smart_search_notification.py  test_workflow_policy.py
(+49 files in other folders)
